Update nuget packages

--- a/Last.fm-Scrubbler-WPF-Test/App.config
+++ b/Last.fm-Scrubbler-WPF-Test/App.config
@@ -15,7 +15,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="RestSharp" publicKeyToken="598062e77f915f75" culture="neutral" />
@@ -28,6 +28,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Caliburn.Micro" publicKeyToken="8e5891231f2ed21f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.2.0" newVersion="2.0.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.core" publicKeyToken="1488e028ca7ab535" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.10.53" newVersion="1.1.10.53" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SQLitePCLRaw.batteries_v2" publicKeyToken="8226ea5df37bcae9" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.10.53" newVersion="1.1.10.53" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
