--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -2,28 +2,28 @@
 <packages>
   <package id="Caliburn.Micro" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
-  <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net452" />
+  <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.0.1.307" targetFramework="net452" />
   <package id="Inflatable.Lastfm.SQLite" version="0.2.0.211" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
-  <package id="RestSharp" version="106.3.0-alpha0002" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="RestSharp" version="106.3.0-alpha0018" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.17.1" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.5.166-beta" targetFramework="net461" />
   <package id="SQLitePCL.raw_basic" version="0.9.0-pre8" targetFramework="net461" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.9" targetFramework="net461" />
-  <package id="SQLitePCLRaw.core" version="1.1.9" targetFramework="net461" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.9" targetFramework="net461" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.9" targetFramework="net461" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.9" targetFramework="net461" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.9" targetFramework="net461" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.10-pre20180223200113" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="1.1.10-pre20180223200113" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.10-pre20180223200113" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.10-pre20180223200113" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.10-pre20180223200113" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.10-pre20180223200113" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0-preview1-26216-02" targetFramework="net461" />
   <package id="taglib" version="2.1.0.0" targetFramework="net452" />
 </packages>
