--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -4,16 +4,16 @@
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.0.1.307" targetFramework="net461" />
-  <package id="Moq" version="4.8.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
-  <package id="NUnit" version="3.9.0" targetFramework="net461" />
-  <package id="NUnitLite" version="3.9.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="Moq" version="4.8.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="NUnitLite" version="3.10.1" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0-preview1-26216-02" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0-preview1-26216-02" targetFramework="net461" />
 </packages>
