--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Converters\EnumDescriptionConverter.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Interfaces\IAuthScrobbler.cs" />
+    <Compile Include="Interfaces\IFileOperator.cs" />
     <Compile Include="Interfaces\IMessageBoxService.cs" />
     <Compile Include="Interfaces\IExtendedWindowManager.cs" />
     <Compile Include="Interfaces\IFileDialog.cs" />
@@ -165,6 +166,7 @@
     <Compile Include="Interfaces\IScrobblerFactory.cs" />
     <Compile Include="Interfaces\ITextFieldParser.cs" />
     <Compile Include="Interfaces\ITextFieldParserFactory.cs" />
+    <Compile Include="Models\FileOperator.cs" />
     <Compile Include="Models\OpenFileDialogService.cs" />
     <Compile Include="Models\SaveFileDialogService.cs" />
     <Compile Include="Models\Artist.cs" />
