--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -106,6 +106,7 @@
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Primitives.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security.Cryptography.Algorithms, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.Cryptography.Algorithms.4.3.1\lib\net461\System.Security.Cryptography.Algorithms.dll</HintPath>
     </Reference>
@@ -165,8 +166,10 @@
     <Compile Include="Interfaces\ILocalFileFactory.cs" />
     <Compile Include="Interfaces\IOpenFileDialog.cs" />
     <Compile Include="Interfaces\IScrobblerFactory.cs" />
+    <Compile Include="Interfaces\ISerializer.cs" />
     <Compile Include="Interfaces\ITextFieldParser.cs" />
     <Compile Include="Interfaces\ITextFieldParserFactory.cs" />
+    <Compile Include="Models\DCSerializer.cs" />
     <Compile Include="Models\DirectoryOperator.cs" />
     <Compile Include="Models\FileOperator.cs" />
     <Compile Include="Models\OpenFileDialogService.cs" />
