Can minimize to tray

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -43,6 +43,12 @@
       <setting name="CSVDelimiters" serializeAs="String">
         <value>,</value>
       </setting>
+      <setting name="MinimizeToTray" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="StartMinimized" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
