--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -10,7 +10,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="RestSharp" version="106.3.0-alpha0018" targetFramework="net461" />
+  <package id="RestSharp" version="106.3.0-alpha0025" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.18.1" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.5.166-beta" targetFramework="net461" />
   <package id="SQLitePCL.raw_basic" version="0.9.0-pre8" targetFramework="net461" />
@@ -25,6 +25,6 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0-preview2-26406-04" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0-rc1" targetFramework="net461" />
   <package id="taglib" version="2.1.0.0" targetFramework="net452" />
 </packages>
