--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -8,13 +8,13 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="NUnitLite" version="3.10.1" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0-rc1" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-rc1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.0-rc1" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0-rc1" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
