Add Update Check

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -49,6 +49,9 @@
       <setting name="StartMinimized" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="StartupUpdateCheck" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
