--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Octokit" version="0.29.0" targetFramework="net461" />
   <package id="RestSharp" version="106.3.0" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.19.0" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.5.166-beta" targetFramework="net461" />
