--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 before_build:
  - nuget restore
 build_script:
- - msbuild /verbosity:quiet "Last.fm-Scrubbler-WPF"
+ - msbuild /verbosity:quiet "Last.fm-Scrubbler-WPF.sln"
 test_script:
  - Last.fm-Scrubbler-WPF-Test\TestCoverage\RunCoverage.bat
 after_test:
