--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ before_build:
 build_script:
  - msbuild /verbosity:quiet "Last.fm-Scrubbler-WPF.sln"
 test_script:
- - Last.fm-Scrubbler-WPF-Test\TestCoverage\RunCoverage.bat
+ - "Last.fm-Scrubbler-WPF-Test\TestCoverage\RunCoverage.bat"
 after_test:
   - ps: |
       $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
