--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ before_build:
 build_script:
  - msbuild /verbosity:quiet "Last.fm-Scrubbler-WPF.sln"
 test_script:
- - Last.fm-Scrubbler-WPF-Test\TestCoverage\RunCoverage.bat
+ - .\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:"..\bin\Debug\Last.fm-Scrubbler-WPF-Test.exe" -output:".\coverage.xml" -filter:"+[Last.fm-Scrubbler-WPF]Scrubbler* -[Last.fm-Scrubbler-WPF]Scrubbler.Views.*"
 after_test:
   - ps: |
       $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
