--- a/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
+++ b/Last.fm-Scrubbler-WPF/Last.fm-Scrubbler-WPF.csproj
@@ -219,6 +219,7 @@
     <Compile Include="ViewModels\GeneralSettingsViewModel.cs" />
     <Compile Include="ViewModels\NewVersionViewModel.cs" />
     <Compile Include="ViewModels\ScrobbleViewModels\ScrobbleMultipleTimeViewModelBase.cs" />
+    <Compile Include="ViewModels\ScrobbleViewModels\ScrobbleMultipleViewModelBase.cs" />
     <Compile Include="ViewModels\ScrobbleViewModels\ScrobblerViewModel.cs" />
     <Compile Include="ViewModels\ScrobbleViewModels\CacheScrobblerViewModel.cs" />
     <Compile Include="ViewModels\ScrobbleViewModels\ITunesScrobbleViewModel.cs" />
@@ -226,7 +227,7 @@
     <Compile Include="ViewModels\SubViewModels\MilestoneViewModel.cs" />
     <Compile Include="ViewModels\SubViewModels\ScrobbableObjectViewModelBase.cs" />
     <Compile Include="ViewModels\SubViewModels\ScrobblePreviewViewModel.cs" />
-    <Compile Include="ViewModels\ScrobbleViewModels\ScrobbleTimeViewModelBase.cs" />
+    <Compile Include="ViewModels\ScrobbleViewModels\ScrobbleTimeViewModel.cs" />
     <Compile Include="ViewModels\ScrobbleViewModels\SetlistFMScrobbleViewModel.cs" />
     <Compile Include="ViewModels\ScrobbleViewModels\SpotifyScrobbleViewModel.cs" />
     <Compile Include="ViewModels\SubViewModels\ConfigureCSVParserViewModel.cs" />
